kubernetes/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapp-ui-ingress
  annotations:
    konghq.com/protocols: "https"
    konghq.com/https-redirect-status-code: "301"
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - weatherapp.local
      secretName: weatherapp-ui-tls
  rules:
    - host: weatherapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weatherapp-ui
                port:
                  number: 3000
